<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="#094873"
    android:orientation="vertical">
    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recycler"
        android:layout_width="match_parent"
        android:layout_height="56dp" />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:orientation="horizontal">
        <TextView
            android:id="@+id/effect"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_weight="1"
            android:drawableTop="@drawable/effect"
            android:gravity="center"
            android:text="@string/effect"
            android:textColor="#ffffffff"
            android:textSize="9sp"/>
        <TextView
            android:id="@+id/crop"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_weight="1"
            android:drawableTop="@drawable/crop"
            android:gravity="center"
            android:text="@string/crop"
            android:textColor="#ffffffff"
            android:textSize="9sp"/>
        <TextView
            android:id="@+id/rotate"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_weight="1"
            android:drawableTop="@drawable/rotate"
            android:gravity="center"
            android:text="@string/photo_editor_rotate"
            android:textColor="#ffffffff"
            android:textSize="9sp"/>
    </LinearLayout>
</LinearLayout>