<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <FrameLayout
        android:id="@+id/topLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@android:color/white">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/photo_editor_top_bar_height"
            android:background="@color/color_primary">

            <ImageView
                android:id="@+id/backButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/photo_editor_btn_done_margin"
                android:padding="10dp"
                android:src="@drawable/back"
                android:text="@string/photo_editor_done"
                android:textColor="@android:color/white"
                android:textSize="18sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_centerInParent="true"
                android:layout_marginTop="@dimen/photo_editor_center_text_top_margin"
                android:gravity="center_horizontal"
                android:text="@string/photo_editor_edit"
                android:textColor="@android:color/white"
                android:textSize="@dimen/photo_editor_top_title_text_size" />

            <ImageView
                android:id="@+id/doneButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_marginTop="@dimen/photo_editor_btn_done_margin"
                android:padding="10dp"
                android:src="@drawable/sure"
                android:text="@string/photo_editor_apply"
                android:textColor="@android:color/white"
                android:textSize="18sp" />

            <ProgressBar
                android:id="@+id/progressBar"
                android:layout_width="32dp"
                android:layout_height="32dp"
                android:layout_alignParentRight="true"
                android:layout_marginTop="@dimen/photo_editor_btn_done_margin"
                android:layout_marginRight="10dp"
                android:visibility="gone" />
        </RelativeLayout>
    </FrameLayout>

    <RelativeLayout
        android:id="@+id/photoViewLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/bottomLayout"
        android:layout_below="@+id/topLayout">

        <com.yd.photoeditor.imageprocessing.ImageProcessingView
            android:id="@+id/imageProcessingView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="2dp"
            android:layout_marginBottom="2dp"
            android:layout_centerInParent="true"/>

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:id="@+id/sourceImage"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:contentDescription="@string/photo_editor"
                android:scaleType="matrix"
                android:visibility="gone"/>
        </FrameLayout>

        <FrameLayout
            android:id="@+id/imageViewLayout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"/>
    </RelativeLayout>

    <FrameLayout
        android:id="@+id/bottomLayout"
        android:layout_width="match_parent"
        android:layout_height="@dimen/photo_editor_option_height"
        android:layout_alignParentBottom="true"
        android:gravity="bottom|center" />
</RelativeLayout>